--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,11 +1,16 @@
+/**** Navbar component ****/
 .Navbar {
+  width: 100%;
+  height: 15vh;
+  background-color: white;
+}
+
+/**** Navbar static ****/
+.Navbar .nav-close {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  height: 15vh;
-  background-color: salmon;
 }
 
 .Navbar .nav-element {
@@ -36,4 +41,35 @@
   margin: 10px;
   height: 45px;
   width: 45px;
+}
+
+/**** Navbar dynamic open ****/
+.toShow {
+  display: flex;
+}
+
+.toHide {
+  display: none;
+}
+
+.Navbar .nav-open {
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  min-height: 20vh;
+  padding: 10px;
+  background-color: #FDF7F0;
+  transition: 0.3s linear;
+}
+
+.Navbar .nav-open a {
+  text-decoration: none;
+  color: black;
+  transition: 0.2s linear;
+}
+
+.Navbar .nav-open a:hover {
+  font-size: 1.5rem;
+  color: #ff0d0d;
 }
