add css on cities and citycard

--- a/src/components/CityCard/CityCard.css
+++ b/src/components/CityCard/CityCard.css
@@ -1,4 +1,17 @@
 .city-img {
-  width: 40vw;
-  height: 40vh;
+  width: 30vw;
+  height: 30vw;
+  border-radius: 20px;
+}
+
+.city-name {
+  color: white;
+  text-shadow: 2px 2px 2px black;
+  text-align: center;
+  font-family: 'Titillium Web', sans-serif;
+  font-style: normal;
+  font-weight: 900;
+  position: relative;
+  bottom: 28%;
+  z-index: 10;
 }
