--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,23 +1,32 @@
 .Contact {
   height: 100vh;
-  width: 100vw;
+  width: 80vw;
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
 }
 
 .Contact h1 {
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 900;
 }
 
 .Contact p {
   font-style: italic;
+  font-size: 0.5rem;
 }
 
 .Contact .contactForm {
   display: flex;
   flex-direction: column;
   font-weight: bold;
+  font-size: 0.8rem;
+}
+
+
+.Contact .emailContainer {
+  margin-top: 20px;
+  border-top: 1px solid rgba(0, 0, 0, 0.5)
 }
 
 .Contact .messageContent, .Contact .emailContent {
@@ -29,7 +38,7 @@
 .Contact h3 {
   font-weight: bold;
   width: 30vw;
-  color: red;
+  color: var(--text-color);
 }
 
 .Contact h4 {
@@ -55,12 +64,19 @@
 .Contact .submitButton {
   cursor: pointer;
   margin: 30px auto;
-  padding: 20px;
-  width: 15vw;
-  border-radius: 10px;
-  color: red;
-  border: 1px solid red;
+  padding: 10px;
+  width: 11vw;
+  border-radius: 20px;
+  font-weight: bold;
+  color: var(--text-color);
+  border: 2px solid var(--text-color);
   background-color: white;
+  transition: 0.2s linear;
+}
+
+.Contact .submitButton:hover {
+  background-color: var(--text-color);
+  color: white;
 }
 
 .Contact .info {
