--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -66,7 +66,7 @@
   cursor: pointer;
   margin: 30px auto;
   padding: 10px;
-  width: 11vw;
+  min-width: 11vw;
   border-radius: 20px;
   font-weight: bold;
   color: var(--text-color);
