--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -8,7 +8,7 @@
   
   width: 100%;
   font-size: 1.5rem;
-  padding: 0.5rem;
+  /* padding: 0.5rem; */
   color: black;
   border-radius: 6px;
   outline: none;
