--- a/src/components/GreeterProfilCard/GreeterProfilCard.css
+++ b/src/components/GreeterProfilCard/GreeterProfilCard.css
@@ -7,6 +7,8 @@
   margin-bottom: 50px;
   width:22vw;
   border-radius: 20px;
+  margin-top: 23px;
+  box-shadow: 0px 0px 5px black;
 }
 
 .greeter-profil-bloc-card-btn {
