--- a/src/components/GreeterProfilInfo/GreeterProfilInfo.css
+++ b/src/components/GreeterProfilInfo/GreeterProfilInfo.css
@@ -15,8 +15,8 @@
   text-align:justify;
   width:35vw;
   padding: 0 1vw;
-  background: rgba(231, 26, 28, 0.05);
-  border: 1px solid rgba(231, 26, 28, 0.5);
+  /* background: rgba(231, 26, 28, 0.05);
+  border: 1px solid rgba(231, 26, 28, 0.5); */
   box-sizing: border-box;
   border-radius: 10px;
 }
