some change in the meet-bar-search with react-select

--- a/src/components/MeetGreeterBar/MeetGreeterBar.css
+++ b/src/components/MeetGreeterBar/MeetGreeterBar.css
@@ -1,51 +1,40 @@
-.navbar {
+.meetbar {
   height: 10vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.meet-items {
+  display: flex;
+  text-align: center;
+  width: 90vw;
+  justify-content: space-evenly;
+  height: 10vh;
+  align-items: center;
+  
+}
+
+
+
+.meet-select{
+  background-color: #ffe0e0;
+  width: 20rem;
+  height: 3rem;
+  border-radius: 10rem;
+}
+
+
+
 .meet-greeter-btn{
-  border-radius: 10px;
+  margin-top: 2rem;
+  transform: translateX(-50%);
+  position: relative;
+  left: 50%;
+  border-radius: 20px;
   padding: 10px;
   background-color: white;
-}
-
-.navbar-logo {
-  color: white;
-  text-decoration: none;
-  font-size: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 10rem;
-}
-
-.nav-items {
-  display: flex;
-  list-style: none;
   text-align: center;
-  width: 70vw;
-  justify-content: space-evenly;
+  width: 15rem;
+
 }
-
-.nav-item {
-  display: flex;
-  background: #FDF7F0;
-  align-items: center;
-  height: 7vh;
-  width: 10rem;
-  border-radius: 7vh;
-}
-
-.nav-item a {
-  text-decoration: none;
-  color: rgb(0, 0, 0);
-  font-size: 1.1rem;
-  margin-right: 2rem;
-  padding: 6px 16px;
-  border-radius: 5px;
-}
-
-
-
