--- a/src/components/GreeterCard/GreeterCard.css
+++ b/src/components/GreeterCard/GreeterCard.css
@@ -1,10 +1,12 @@
 .greeter-card {
-  /* display: flex; */
+  width: 20rem;
+  height: 15rem;
+  margin: 1rem 0;
 }
 
 .greeter-img {
-  width: 30vw;
-  height: 30vw;
+  width: 100%;
+  height: 100%;
   border-radius: 20px;
 }
 
