--- a/src/screens/Contact/Contact.css
+++ b/src/screens/Contact/Contact.css
@@ -35,6 +35,19 @@
   justify-content: space-evenly;
 }
 
+.Contact .civilityContent {
+  justify-content: flex-start;
+}
+
+.Contact .civilityContent select {
+  border-radius: 20px;
+  padding: 5px;
+  border-top: 1px solid rgba(0, 0, 0, 0.5);
+  width: 100px;
+  margin-left: -55px;
+  height: 40px;
+}
+
 .Contact h3 {
   font-weight: bold;
   width: 30vw;
