--- a/src/components/GreetersPagination/GreetersPagination.css
+++ b/src/components/GreetersPagination/GreetersPagination.css
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   justify-content: space-around;
   width: 70%;
-  height: 35rem;
+  /* height: 35rem; */
   margin: 0 auto;
   overflow: hidden;
   padding-bottom: 2rem;
@@ -14,40 +14,20 @@
   padding: 70px;
 }
 
-.greeters-pagination-btn {
-  font-family: 'Titillium Web', sans-serif;
-  background-color: #F4E7E7;
-  position: relative;
-  top: 99%;
-  left: 50%;
-  padding-left: 10%;
-  padding-right: 10%;
-  transform: translateX(-50%);
-  font-style: normal;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 27px;
-  border: 2px solid black;
-  box-sizing: border-box;
-  border-radius: 66px;
-  color: black;
-  cursor: pointer;
-}
-
 .paginationBttns {
   width: 100%;
   height: 5rem;
   list-style: none;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   padding: 2rem 0;
   margin-bottom: 5rem;
   background-color: rgb(255, 211, 211);
 }
 
 .paginationBttns a {
-  padding:2rem 4rem;
+  padding:2rem 2rem;
   margin: 10px;
   border-radius: 15px;
   /* border: 1px solid #2b2eff; */
