--- a/src/screens/AdminConnection/AdminConnection.css
+++ b/src/screens/AdminConnection/AdminConnection.css
@@ -17,7 +17,8 @@
   align-items: center;
   padding: 25px;
   margin: 50px;
-  background-color: rgba(0, 0, 0, 0.1);
+  /* background-color: rgba(0, 0, 0, 0.1); */
+  background-color: rgb(253, 247, 240);
   box-shadow: 0px 2px 5px -5px black;
   border-radius: 10px;
   border: 1px solid rgba(0,0,0,0.2)
