add admin menu to greeters & city admin page RC

--- a/src/admin/components/AdminMenu/AdminMenu.css
+++ b/src/admin/components/AdminMenu/AdminMenu.css
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   height: 100%;
-  width: 300px;
-  background:rgba(90, 80, 80, 0.15) ;
+  width: 30%;
+  background:rgba(0, 0, 0, 0.1) ;
 }
 .sidebar .nav-links {
   height: 100%;
