--- a/src/admin/screens/AdminDetailsCity/AdminDetailsCity.css
+++ b/src/admin/screens/AdminDetailsCity/AdminDetailsCity.css
@@ -8,11 +8,16 @@
   padding: 20px 0;
   text-align: center;
   background: rgba(0, 0, 0, 0.1);
+  margin: 0 50px;
+  border-left: 1px solid ;
+
 }
 
 .admin-details-city-list{
   padding-top: 20px;
-  margin-right: 30px;
+  margin: 0 50px;
+  border-left: 1px solid ;
+
 
 }
 
