--- a/src/admin/screens/AdminDetailsGreeter/AdminDetailsGreeter.css
+++ b/src/admin/screens/AdminDetailsGreeter/AdminDetailsGreeter.css
@@ -8,11 +8,13 @@
   padding: 20px 0;
   text-align: center;
   background: rgba(0, 0, 0, 0.1);
+  margin: 0 50px;
+
 }
 
 .admin-details-greeter-list{
   padding-top: 20px ;
-  margin-right: 30px;
+  margin: 0 50px;
 }
 
 .admin-details-greeter-item{
@@ -21,7 +23,9 @@
 }
 
 .linkAdmin{
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
   text-decoration: none;
   position: absolute;
-  right: 0px;
+  right: 5px;
 }
