--- a/src/admin/screens/CitiesList/CitiesList.css
+++ b/src/admin/screens/CitiesList/CitiesList.css
@@ -12,7 +12,7 @@
   margin:0 2vw;
   padding: 20px 0;
   text-align: center;
-  color : rgba(0, 0, 0, 0.582);
+  color : rgba(0, 0, 0, 0.6);
   font-size: 35px;
 }
 
@@ -22,7 +22,7 @@
 
 .cities-row{
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.582);
+  background-color: rgba(0, 0, 0, 0.6);
   color:white;
   width: 35vw;
   font-size: 22px;
@@ -34,11 +34,16 @@
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.397);
+  background-color: rgba(0, 0, 0, 0.4);
   color: white;
   font-size: 18px;
 }
 
 .cities-item:hover {
   background-color: #ddd;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.admin-icon-btn:hover {
+cursor: pointer;
 }
