--- a/src/admin/screens/AdminDetailsGreeter/AdminDetailsGreeter.css
+++ b/src/admin/screens/AdminDetailsGreeter/AdminDetailsGreeter.css
@@ -7,8 +7,11 @@
 .admin-details-greeter-title{
   padding: 20px 0;
   text-align: center;
-  background: rgba(0, 0, 0, 0.1);
   margin: 0 50px;
+  color : rgba(0, 0, 0, 0.6);
+  font-size: 2.5rem;
+  border-bottom: 1px solid black;
+
 
 }
 
@@ -18,17 +21,22 @@
 }
 
 .admin-details-greeter-item{
-  padding-top: 20px;
+  padding: 20px 0;
   border-bottom: 1px solid;
   list-style: none;
+}
+
+.admin-details-greeter-item span{
+  text-decoration: underline;
+  font-weight: bold;
+  color : rgba(0, 0, 0, 0.8);
 }
 
 .admin-details-icon-btn{
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  text-decoration: none;
   position: absolute;
   right: 5px;
   cursor: pointer;
-  padding: 0 1px;
+  padding: 0 2px;
 }
