--- a/src/admin/screens/GreetersList/GreetersList.css
+++ b/src/admin/screens/GreetersList/GreetersList.css
@@ -13,7 +13,7 @@
   padding: 20px 0;
   text-align: center;
   color : rgba(0, 0, 0, 0.6);
-  font-size: 35px;
+  font-size: 2.5rem;
 }
 
 .greeters-table {
