--- a/src/admin/screens/Admin/Admin.css
+++ b/src/admin/screens/Admin/Admin.css
@@ -5,29 +5,55 @@
   text-align: center;
 }
 
+.AdminHome-container h2 {
+  margin: 0;
+}
+
 .AdminHome-container a{
+  position: relative;
   text-decoration: none;
   color: #000;
 }
 
 .AdminHome-section{
-  background: rgba(0, 0, 0, 0.1);
   height: 140px;
-  margin: 0 50px;
-
-
+  margin: 0 0px;
+  background-color: white;
+  border-radius: 0px 0px 20px 20px;
+  box-shadow: 0px 2px 2px -2px black;
+  transition: 0.2s linear;
 }
-.AdminHome-section2{
-  height: 140px;
+.AdminHome-section:hover{
+  background-color: rgba(0,0,0,0.1);
+}
+.AdminHome-container .up-section {
+  position: relative;
+  z-index: 100;
+}
+
+.AdminHome-container .middle-section {
+  position: relative;
+  z-index: 50;
+}
+
+.AdminHome-container .down-section {
+  position: relative;
+  z-index: 1;
 }
 
 .AdminHome-title{
-  padding-top: 20px;
+  padding-top: 40px;
   text-decoration: underline;
+  
 }
 
 .AdminHome-big-title{
-  color: rgba(0, 0, 0, 0.6);
+  position: relative;
+  z-index: 110;
+  background-color: rgba(0,0,0,0.1);
   font-size: 2.5rem;
+  margin: 0;
+  padding: 30px;
+  box-shadow: 3px 2px 3px;
 }
 
