--- a/src/admin/screens/AdminContent/AdminContent.css
+++ b/src/admin/screens/AdminContent/AdminContent.css
@@ -1,11 +1,59 @@
-.AdminContent-Container{
+.AdminContent-container{
+  position: absolute;
   width: 70%;
-  margin-left: 30%;
+  left: 30%;
   text-align: center;
 }
 
-.AdminContent-Container li{
-padding: 20px;
-border: 2px solid black;
-cursor: pointer;
+.AdminContent-container h2 {
+  margin: 0;
 }
+
+.AdminContent-container a{
+  position: relative;
+  text-decoration: none;
+  color: #000;
+}
+
+.AdminContent-section{
+  height: 140px;
+  margin: 0 0px;
+  background-color: white;
+  border-radius: 0px 0px 20px 20px;
+  box-shadow: 0px 2px 2px -2px black;
+  transition: 0.2s linear;
+}
+.AdminContent-section:hover{
+  background-color: rgba(0,0,0,0.1);
+}
+.AdminContent-container .up-section {
+  position: relative;
+  z-index: 100;
+}
+
+.AdminContent-container .middle-section {
+  position: relative;
+  z-index: 50;
+}
+
+.AdminContent-container .down-section {
+  position: relative;
+  z-index: 1;
+}
+
+.AdminContent-title{
+  padding-top: 40px;
+  text-decoration: underline;
+  
+}
+
+.AdminContent-big-title{
+  position: relative;
+  z-index: 110;
+  background-color: rgba(0,0,0,0.1);
+  font-size: 2.5rem;
+  margin: 0;
+  padding: 30px;
+  box-shadow: 3px 2px 3px;
+}
+
