--- a/src/admin/components/AdminMenu/AdminMenu.css
+++ b/src/admin/components/AdminMenu/AdminMenu.css
@@ -32,3 +32,20 @@
   background-color: rgba(0,0,0,0.5);
   color:white;
 }
+
+.sidebar .returnButton {
+  position: absolute;
+  min-width: 20px;
+  z-index: 200;
+  padding: 5px;
+  cursor: pointer;
+  transition: 0.2s linear;
+  color: black;
+  text-shadow: 1px 1px silver;
+}
+
+.sidebar .returnButton:hover {
+  transform: scale(1.5);
+  color: white;
+  text-shadow: 1px 1px black;
+}
