--- a/src/admin/screens/AdminDetailsCity/AdminDetailsCity.css
+++ b/src/admin/screens/AdminDetailsCity/AdminDetailsCity.css
@@ -36,6 +36,12 @@
 
 }
 
-/* .form-group input{
-  width: 70%;
-} */
+.admin-photo-city {
+  width: 20vw;
+}
+
+.admin-details-city-container h3 {
+  text-decoration: underline;
+  font-weight: bold;
+  color : rgba(0, 0, 0, 0.8);
+}
