css profil greeter

--- a/src/components/GreeterProfilCard/GreeterProfilCard.css
+++ b/src/components/GreeterProfilCard/GreeterProfilCard.css
@@ -1,11 +1,12 @@
 .greeter-profil-bloc-card {
   display: block;
   align-content: center;
+  width:20vw;
 }
 
 .greeter-profil-bloc-card-img {
-  margin-bottom: 50px;
-  width:22vw;
+  /* margin-bottom: 50px; */
+  width:20vw;
   border-radius: 20px;
   margin-top: 23px;
   box-shadow: 0px 0px 5px black;
@@ -14,11 +15,11 @@
 .greeter-profil-bloc-card-btn {
   font-family: 'Titillium Web', sans-serif;
   background-color: #F4E7E7;
-  position: relative;
+  position: absolute;
   top: 99%;
   left: 50%;
-  padding-left: 10%;
-  padding-right: 10%;
+  padding-left: 5%;
+  padding-right: 5%;
   transform: translateX(-50%);
   font-style: normal;
   font-weight: bold;
@@ -29,4 +30,10 @@
   border-radius: 66px;
   color: black;
   cursor: pointer;
+}
+
+.greeter-profil-bloc-info-catchphrase {
+  font-style : italic;
+  text-align: left;
+  font-size: 17px;
 }
