--- a/src/components/GreeterProfil/GreeterProfil.css
+++ b/src/components/GreeterProfil/GreeterProfil.css
@@ -2,6 +2,7 @@
   display: flex;
  justify-content: center;
   font-family: 'Titillium Web', sans-serif;
+  margin-top:1vh;
 }
 
 .greeter-profil-left {
