--- a/src/components/GreeterProfilInfo/GreeterProfilInfo.css
+++ b/src/components/GreeterProfilInfo/GreeterProfilInfo.css
@@ -24,10 +24,10 @@ margin: 0 2vw 0 0;
 }
 
 .greeter-profil-bloc-info-infos {
-  padding: 0 1vw;
+  padding: 1vh 1vw;
   width:13vw;
-  background: rgb(255, 237, 237);
-  border: 3px solid rgba(255,0,0);
+  background: #faf0e6;
+  box-shadow: 0px 0px 5px -2px black;
   box-sizing: border-box;
   border-radius: 20px 0;
   text-align: center;
