--- a/src/components/GreetersPagination/GreetersPagination.css
+++ b/src/components/GreetersPagination/GreetersPagination.css
@@ -14,19 +14,24 @@
 }
 
 .paginationBttns {
-  width: 100%;
+  /* width: 100%; */
+  width: 70%;
   height: 5rem;
   list-style: none;
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: 2rem 0;
-  margin-bottom: 5rem;
-  background-color: rgb(255, 211, 211);
+  /* padding: 2rem 0; */
+  /* margin-bottom: 5rem; */
+  margin: 0 auto 2rem auto;
+  /* background-color: rgb(255, 211, 211); */
+  background: rgb(255, 237, 237);
+  border-radius:20px;
 }
 
 .paginationBttns a {
-  padding:2rem 2rem;
+  /* padding:2rem 2rem; */
+  padding:1rem 1rem;
   margin: 10px;
   border-radius: 15px;
   /* border: 1px solid #2b2eff; */
