--- a/src/components/ConceptBanner/ConceptBanner.css
+++ b/src/components/ConceptBanner/ConceptBanner.css
@@ -1,16 +1,13 @@
 .ConceptBanner-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  width: 60%;
+  max-height: 30vh;
+  margin: 20px;
 }
 
 .ConceptBanner-image {
-
- margin: 70px;
   border-radius: 20px;
-  display: flex;
-width: 800px;
-height: 400px;
+  width: 100%;
+  object-fit: fill;
 }
 
 .ConceptBanner-title {
@@ -20,7 +17,6 @@ height: 400px;
   font-family: 'Titillium Web', sans-serif;
   font-style: normal;
   font-weight: 900;
-  position: relative;
   bottom: 28%;
   z-index: 10;
   position: absolute;
