--- a/src/components/ConceptBanner/ConceptBanner.css
+++ b/src/components/ConceptBanner/ConceptBanner.css
@@ -1,28 +1,30 @@
-.ConceptBanner-container {
-  width: 60%;
-  max-height: 30vh;
-  margin: 20px;
+.ConceptBanner-Container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  margin-top: 50px;
+  height: auto;
 }
 
 .ConceptBanner-image {
   border-radius: 20px;
-  width: 100%;
-  object-fit: fill;
+  width: 95vw;
+  object-fit: cover;
 }
 
 .ConceptBanner-title {
   color: white;
+  width: 100%;
   text-shadow: 2px 2px 2px black;
   text-align: center;
   font-family: 'Titillium Web', sans-serif;
   font-style: normal;
   font-weight: 900;
-  bottom: 28%;
-  z-index: 10;
+  font-size: 5vw;
   position: absolute;
-  top: 50%;
+  top:20vh;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translatex(-50%);
 }
   
 
