--- a/src/components/ConceptPhotos/ConceptPhotos.css
+++ b/src/components/ConceptPhotos/ConceptPhotos.css
@@ -1,13 +1,11 @@
 .ConceptPhotos-Container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   object-fit: cover;
-  
  }
 
  .ConceptPhotos-Block-Image1 {
   display: block;
-    /* margin: 2vh 5vw; */
     text-align: center;
     width: 40vw;
  }
@@ -19,11 +17,10 @@
     width: 40vw;
  }
 
- /* .ConceptPhotos-Block-Image2 .ConceptPhotos-img{
-  width: 120%;
- } */
+
 
  .ConceptPhotos-img{
+
   width: 100%;
   border-radius: 20px;
   box-shadow: 1px 1px 1px #a2a2a2;
@@ -45,32 +42,7 @@
   transition: 0.4s linear;
   line-height: 20px;
   margin: 10px;
-  /* position: relative;
-  border-radius: 66px;
-  border: 2px solid;
-  text-align: center;
-  width: fit-content;
-  font-family: Titillium Web;
-  font-weight: 700;
-  font-size: 18px;
-  height: fit-content;
-  cursor: pointer; */
-/* text-align: center;
-  display: inline-block;
-  border-radius: 4px;
-  background-color: #ff0d0d;
-  border: none;
-  color: #FFFFFF;
-  text-align: center;
-  font-size: 20px;
-  padding: 20px;
-  width: 250px;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin: 5px;
-  width: 200px;
-  height: 10%; */
-}
+  }
 
  .ConceptPhotos-btn-left{
   font-family: 'Titillium Web', sans-serif;
@@ -87,35 +59,7 @@
   cursor: pointer;
   transition: 0.4s linear;
   line-height: 20px;
-  margin: 10px;
-  /* position: relative; */
-  /* padding: 9px 20px;
-  line-height: 27.38px; */
-  /* border-radius: 66px;
-  border: 2px solid;
-  text-align: center;
-  width: fit-content;
-  font-family: Titillium Web;
-  font-weight: 700;
-  font-size: 18px;
-  height: fit-content;
-  cursor: pointer;
-  padding: 0 30px; */
-/* text-align: center;
-  display: inline-block;
-  border-radius: 4px;
-  background-color: #ff0d0d;
-  border: none;
-  color: #FFFFFF;
-  text-align: center;
-  font-size: 20px;
-  padding: 20px;
-  width: 250px;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin: 5px;
-  width: 200px;
-  height: 10%; */
+  margin: 10px;  
  }
 
  .Text-Concept{
@@ -123,13 +67,32 @@
   font-family: 'Titillium Web', sans-serif;
 }
 
+.text-container{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
 .Text-Valeurs{
   padding: 1em;
-  width: 100%;
+  width: 90%;
   background: #f5f3f3;
   border: 1px solid #333;
   box-sizing: border-box;
   border-radius: 10px;
-  margin: 0 0 0 2vw;
+  margin: 0 auto;
   box-shadow: 1px 1px 1px black;
+}
+
+@media (max-width: 500px) { 
+  
+  .ConceptPhotos-btn-right{
+  padding: 0 20px;
+    
+    }
+  
+   .ConceptPhotos-btn-left{
+  padding: 0 20px;
+      
+   }
 }
