--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,12 +3,13 @@
   display:flex;
   flex-direction: column;
   width: 100%;
+  justify-content: center;
   
 }
 .contact {
   display: flex;
-  margin: 70px 40px 70px 70px;
-
+  justify-content: center;
+margin-top: 20px;
 }
 .social {
 margin:16px;
@@ -20,7 +21,6 @@ margin:16px;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
-  line-height: 27px;
   border: 2px solid black;
   box-sizing: border-box;
   border-radius: 66px;
@@ -37,10 +37,17 @@ margin:16px;
 
 .globalCollon{
 display:flex ;
-margin: 0px 40px 70px 70px;
+margin: 20px;
+/* justify-content: center; */
+}
 
+.titre{
+  display:flex ;
+  justify-content: center;
+  width: 50px;
 
 }
+
 .Info {
   list-style-type: none;
   margin:20px;
@@ -54,5 +61,22 @@ margin: 20px;
 
   text-decoration: none;
   color: black;
+
+}
+
+@media (max-width: 500px) { 
+  .globalCollon{
+    display:flex ;
+    flex-direction: column;
+    justify-content: center;
+
+}
+.button{
+  padding: 0 20px;
+
+}
+.social {
+  margin:10px;
+  }
 
 }
