--- a/src/screens/MeetGreeter/MeetGreeter.css
+++ b/src/screens/MeetGreeter/MeetGreeter.css
@@ -8,3 +8,13 @@
   text-align: center;
   font-size: 2rem;
 }
+
+@media screen and (max-width:950px) {
+  .title-meet{
+    padding-top: 2rem;
+    font-size: 2rem;
+  }
+  .little-title-meet{
+    font-size: 1rem;
+  }
+}
