always css change poudre aux yeux

--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -6,7 +6,7 @@
 
 .map {
   margin: 5rem auto;
-  width: 80%;
+  width: 95vw;
   min-height: 50vh;
   border-radius: 25px;
   border: 1px solid black;
