create legalinfo page

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -64,6 +64,11 @@ margin: 20px;
 
 }
 
+.legal-link {
+  text-decoration: none;
+  color: black;
+}
+
 @media (max-width: 500px) { 
   .globalCollon{
     display:flex ;
