--- a/src/components/GreeterProfilCard/GreeterProfilCard.css
+++ b/src/components/GreeterProfilCard/GreeterProfilCard.css
@@ -1,12 +1,12 @@
 .greeter-profil-bloc-card {
   display: block;
   align-content: center;
-  width:20vw;
+  width:30vw;
 }
 
 .greeter-profil-bloc-card-img {
   /* margin-bottom: 50px; */
-  width:20vw;
+  width:30vw;
   border-radius: 20px;
   margin-top: 23px;
   box-shadow: 0px 0px 5px black;
@@ -23,7 +23,6 @@
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
-  line-height: 27px;
   border: 2px solid black;
   box-sizing: border-box;
   border-radius: 66px;
@@ -42,4 +41,49 @@
   font-style : italic;
   text-align: left;
   font-size: 17px;
+  text-align: justify;
+}
+
+h4 {
+  font-size:19px;
+}
+
+@media screen and (max-width: 1024px) {
+  .greeter-profil-bloc-card {
+    width:100vw;
+  }
+  .greeter-profil-bloc-card-img {
+    width:80vw;
+    margin-top: 60px;
+  }
+
+  .greeter-profil-bloc-info-catchphrase {
+    padding: 0 11vw;
+    font-size: 16px;
+  }
+  .greeter-profil-bloc-card-btn {
+    font-size: 16px;
+    line-height: 40px;
+    margin: 2vh 0;
+    padding: 0 30px;
+    width:40vw;
+  }
+  .greeter-profil-bloc-card-btn-a{
+    position: relative;
+    bottom: 96%;
+    transform: translateX(-50%);
+  }
+  h4 {
+    font-size:20px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .greeter-profil-bloc-card-btn {
+    font-size: 16px;
+    line-height: 40px;
+    margin: 2vh 0;
+    padding: 0 30px;
+    width:75vw;
+  }
 }
