--- a/src/components/GreeterProfilInfo/GreeterProfilInfo.css
+++ b/src/components/GreeterProfilInfo/GreeterProfilInfo.css
@@ -1,6 +1,6 @@
 .greeter-profil-bloc-info {
-  padding:0 80px 0 0;
   display: flex;
+  width:55vw;
 }
 
 .greeter-profil-bloc-info-bloc1 {
@@ -9,15 +9,12 @@ margin: 0 2vw 0 0;
 
 .greeter-profil-bloc-info-city {
   font-size:18px;
-  padding:10px 0;
 }
 
 
 .greeter-profil-bloc-info-description {
   text-align:justify;
-  width:35vw;
-  /* background: rgba(231, 26, 28, 0.05);
-  border: 1px solid rgba(231, 26, 28, 0.5); */
+  width:38vw;
   box-sizing: border-box;
   border-radius: 10px;
   font-size: 20px;
@@ -32,4 +29,46 @@ margin: 0 2vw 0 0;
   border-radius: 20px 0;
   text-align: center;
 }
+h4 {
+  font-size:19px;
+}
 
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
+  .greeter-profil-bloc-info-description {
+    width:38vw;
+  }
+  .greeter-profil-bloc-info-infos {
+    width:17vw;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .greeter-profil-bloc-info {
+    display: block;
+  }
+  .greeter-profil-bloc-info-name {
+    position: absolute;
+    bottom: 99%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .greeter-profil-bloc-info-city p {
+    position: absolute;
+    bottom: 96%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .greeter-profil-bloc-info-description {
+    text-align:justify;
+    padding: 7vh 10vw 0 10vw;
+    width:100vw;
+    font-size: 16px;
+  }
+  .greeter-profil-bloc-info-infos {
+    margin:10vw;
+    width:80vw;
+  }
+  h4 {
+    font-size:20px;
+  }
+}
