--- a/src/screens/LegalInfo/LegalInfo.css
+++ b/src/screens/LegalInfo/LegalInfo.css
@@ -11,7 +11,7 @@
   font-size: 4em;
   padding: 2vh 0;
   color: #faf0e6;
-  text-shadow:rgb(255, 0, 0) 0.1em 0.1em 0.2em;
+  text-shadow:black 0.1em 0.1em 0.2em;
 }
 
 .title2 {
@@ -19,7 +19,7 @@
   font-size: 2em;
   padding: 2vh 0;
   color: #faf0e6;
-  text-shadow:rgb(255, 0, 0) 0.1em 0.1em 0.2em;
+  text-shadow:black 0.1em 0.1em 0.2em;
 }
 
 .legal-info-list {
