update css home - city - contact - profil

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,22 +1,25 @@
 .row {
-  background: #faf0e6;
+  background: var(--bg-color-beige);
   display:flex;
   flex-direction: column;
   width: 100%;
   justify-content: center;
-  
+  font-family: var(--font-typo);
 }
+
 .contact {
   display: flex;
   justify-content: center;
 margin-top: 20px;
 }
+
 .social {
 margin:16px;
 }
+
 .button{
   font-family: 'Titillium Web', sans-serif;
-  background-color: #faf0e6;
+  background-color: var(--bg-color-beige);
   padding: 0 30px;
   font-style: normal;
   font-weight: bold;
