--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -3,7 +3,9 @@
   margin-top: 50px;
   height: auto;
   z-index: 10;
+  font-family: var(--font-typo);
 }
+
 .banner-img {
   width: 95vw;
   height: 70vh;
@@ -25,10 +27,10 @@
   left: 12%;
   width: 40vw;
   z-index: 10;
+  font-size: xxx-large;
 }
 
 .banner-button {
-  font-family: 'Titillium Web', sans-serif;
   background-color: rgba(0,0,0,0.5);
   position: absolute;
   top: 85%;
@@ -36,8 +38,8 @@
   transform: translateX(-50%);
   font-style: normal;
   font-weight: bold;
-  font-size: 18px;
-  line-height: 27px;
+  font-size: 20px;
+  line-height: 50px;
   text-align: center;
   border: 2px solid #FFFFFF;
   box-sizing: border-box;
@@ -71,6 +73,12 @@
   }
   .banner-button {    
     top: 80%;
-    font-size: 15px;  
+    font-size: 16px;  
+    line-height: 22px;
   }
+  
+  .banner-text{
+    font-size: xx-large;
+  }
+  
 }
