--- a/src/components/BannerCity/BannerCity.css
+++ b/src/components/BannerCity/BannerCity.css
@@ -5,6 +5,7 @@
   left: 5%;
   border-radius: 25px;
   object-fit: cover;
+  font-family: var(--font-typo);
 }
 .banner-city-container {
   height: 80vh;
@@ -34,8 +35,14 @@
   transform: translate(-50%);
   font-style: normal;
   font-weight: bold;
-  font-size: 18px;
   line-height: 27px;
   text-align: center;
   color: #FFFFFF;
+  font-size: xx-large;
+}
+
+@media screen and (max-width:500px){
+  .banner-city-text {
+    font-size: 20px;
+  }
 }
