--- a/src/components/Cities/Cities.css
+++ b/src/components/Cities/Cities.css
@@ -2,12 +2,13 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  font-family: var(--font-typo);
 }
 
 .cities-title {
   text-align: center;
   margin: 5rem 0 4rem 0;
-
+font-size: xx-large;
 }
 
 .cities-btn {
@@ -35,6 +36,7 @@
   .cities-title {
     text-align: center;
     margin: 2rem;
+    font-size: 26px;
   }
   .cities-btn {
     margin-top: 1rem;
