--- a/src/components/ConceptPhotos/ConceptPhotos.css
+++ b/src/components/ConceptPhotos/ConceptPhotos.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-around;
   object-fit: cover;
+  font-family: var(--font-typo);
  }
 
  .ConceptPhotos-Block-Image1 {
