--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -3,7 +3,9 @@
   margin-right: 1rem;
   position: relative;
   width: 15vw;
+  font-family: var(--font-typo);
 }
+
 .searchBar input {
   
   width: 100%;
