--- a/src/screens/Contact/Contact.css
+++ b/src/screens/Contact/Contact.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  font-family: var(--font-typo);
 }
 
 .Contact h1 {
@@ -96,4 +97,25 @@
   font-size: 0.7rem;
 }
 
+@media screen and (max-width: 960px) {
+  .Contact h1 {
+    font-size: 2rem;
+  }
+  .Contact .messageElement, .Contact .infoElement {
+    display: block;
+    flex-direction: column;
+  }
+  .messageElement textarea, .messageElement input, .infoElement input{
+    width:72vw;
+  }
+  .Contact h3, .Contact h4 {
+    font-size:16px;
+    width:53vw;
+  }
+  
+  .Contact .civilityContent select {
+    margin-left: 13px;
+  }
+  
+}
 
