--- a/src/components/BannerCity/BannerCity.css
+++ b/src/components/BannerCity/BannerCity.css
@@ -18,7 +18,10 @@ h1 {
   width: 50vw;
   margin: 0 auto;
   text-align: center;
+  text-transform: uppercase;
+  margin: 40px auto;
 }
+
 .alice-carousel__prev-btn, .alice-carousel__next-btn {
   display: none;
 }
