--- a/src/screens/InfoCity/InfoCity.css
+++ b/src/screens/InfoCity/InfoCity.css
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 0px 100px 100px 100px;
-  font-family: var(--font-typo);
+  /* font-family: var(--font-typo); */
   font-size: 20px;
   text-align: justify;
 }
