--- a/src/admin/screens/Admin/Admin.css
+++ b/src/admin/screens/Admin/Admin.css
@@ -62,6 +62,7 @@
 
 .AdminHome-big-title{
   position: relative;
+  width: 70vw;
   z-index: 110;
   background-color: rgba(0,0,0,0.1);
   font-size: 2.5rem;
